# MLOps-nlp-manifesto

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _quarto.yml  api.qmd  index.qmd  install.sh  method.qmd  pyproject.toml  requirements.txt  review.md  train.py
.github/workflows/: docker.yml  test.yml
app/: api.py
docs/: api.html  architecture.html  dataset.html  index.html  method.html  results.html  search.json  styles.css
src/data/: load_data.py  merge_data.py  save_outputs.py
src/features/: prepare_data.py
src/inference/: __init__.py  loader.py  mlflow_model.py  predictor.py
src/models/: topic_model.py
src/preprocessing/: cleaning.py
src/utils/: config.py  logging_config.py
tests/: conftest.py  test_api.py  test_cleaning.py  test_inference.py  test_load_data.py  test_logging.py  test_prepare_data.py  test_topic_model.py
website/: _quarto.yml  api.qmd  architecture.qmd  dataset.qmd  results.qmd
